@@ -5,6 +5,7 @@ NOCC 1.4    ?? ??, 200?
       (Arnaud Boudou).
 
   Patches
+    * Patch #1659330 : Optimize login box (Part 2) (Tim Gerundt).
     * Patch #1650480 : Use "min-width" for modern browsers (Tim Gerundt).
     * Patch #1650207 : Optimize header and footer (Tim Gerundt).
     * Patch #1649280 : Remove "global" <div> (Tim Gerundt).
